--- a/test/fixtures/class_types.yml
+++ b/test/fixtures/class_types.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  desc: MyString
   name: MyString
+  image: MyString
 
 two:
+  desc: MyString
   name: MyString
+  image: MyString
