--- a/test/fixtures/races.yml
+++ b/test/fixtures/races.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  ability: MyString
+  desc: MyString
 
 two:
-  name: MyString
-  ability: MyString
+  desc: MyString
